<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rule_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    android:fadingEdge="none"
    android:scrollbars="none" >

    <LinearLayout
        android:id="@+id/rule_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/event"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/red"
            android:orientation="horizontal" />
        <!-- android:background="@color/red" -->

        <LinearLayout
            android:id="@+id/event"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/add_event"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:text="@string/add_event"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/conditions"
            android:textColor="@color/yellow"
            android:textSize="14sp"
            android:textStyle="bold" />
        <!-- android:textColor="@color/yellow" -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/yellow"
            android:orientation="horizontal" />
        <!-- android:background="@color/yellow" -->

        <LinearLayout
            android:id="@+id/conditions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <include
            android:id="@+id/condition1"
            layout="@layout/ruledetails_row"
            android:visibility="gone" />

        <include
            android:id="@+id/condition2"
            layout="@layout/ruledetails_row"
            android:visibility="gone" />

        <include
            android:id="@+id/condition3"
            layout="@layout/ruledetails_row"
            android:visibility="gone" />

        <Button
            android:id="@+id/add_condition"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:text="@string/add_condition"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/actions"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/green"
            android:orientation="horizontal" />
        <!-- android:background="@color/green" -->

        <LinearLayout
            android:id="@+id/actions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <include
            android:id="@+id/action1"
            layout="@layout/ruledetails_row"
            android:visibility="gone" />

        <include
            android:id="@+id/action2"
            layout="@layout/ruledetails_row"
            android:visibility="gone" />

        <include
            android:id="@+id/action3"
            layout="@layout/ruledetails_row"
            android:visibility="gone" />

        <Button
            android:id="@+id/add_action"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:text="@string/add_action_1"
            android:textColor="@color/blue"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>